infrastructure/group-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: group-db
  name: group-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-db
  template:
    metadata:
      labels:
        app: group-db
    spec:
      containers:
        - image: postgres:16.2
          name: postgres
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5435
          volumeMounts:
            - mountPath: /var/lib/group-db
              name: group-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: group-db-init-config
      volumes:
        - name: group-db-data
          persistentVolumeClaim:
            claimName: group-db-pvc
        - name: group-db-init-config
          configMap:
            name: group-db-init-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: group-db
  name: group-db
spec:
  ports:
    - name: 5435-5435
      port: 5435
      protocol: TCP
      targetPort: 5435
  selector:
    app: group-db
  type: ClusterIP
