infrastructure/media-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: media-db
  name: media-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-db
  template:
    metadata:
      labels:
        app: media-db
    spec:
      containers:
        - image: postgres:16.2
          name: postgres
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5436
          volumeMounts:
            - mountPath: /var/lib/media-db
              name: media-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: media-db-init-config
      volumes:
        - name: media-db-data
          persistentVolumeClaim:
            claimName: media-db-pvc
        - name: media-db-init-config
          configMap:
            name: media-db-init-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: media-db
  name: media-db
spec:
  ports:
    - name: 5436-5436
      port: 5436
      protocol: TCP
      targetPort: 5436
  selector:
    app: media-db
  type: ClusterIP
