infrastructure/user-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - image: postgres:16.2
          name: postgres
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5433
          volumeMounts:
            - mountPath: /var/lib/user-db
              name: user-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: user-db-init-config
      volumes:
        - name: user-db-data
          persistentVolumeClaim:
            claimName: user-db-pvc
        - name: user-db-init-config
          configMap:
            name: user-db-init-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-db
  name: user-db
spec:
  ports:
    - name: 5433-5433
      port: 5433
      protocol: TCP
      targetPort: 5433
  selector:
    app: user-db
  type: ClusterIP
